# apkV2-verify

./: APK_SIGNATURE_V2_FORMAT.md  CMakeLists.txt  apksig_v2_verify.cpp  apksig_v2_verify.h
test/: release.key.pem  release.pk8  release.x509.pem
